third_party/move/move-compiler-v2/tests/checking/typing/shadowing_invalid_types.exp

Diagnostics:
error: cannot adapt `integer` to annotated type `bool`
  ┌─ tests/checking/typing/shadowing_invalid_types.move:8:10
  │
8 │         (x: bool);
  │          ^

error: cannot adapt `bool` to annotated type `u64`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:10:27
   │
10 │         { let x = false; (x: u64); };
   │                           ^

error: cannot adapt `integer` to annotated type `bool`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:11:10
   │
11 │         (x: bool);
   │          ^

error: cannot adapt `address` to annotated type `u64`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:13:43
   │
13 │         { let x = false; { let x = @0x0; (x: u64); }; (x: address); };
   │                                           ^

error: cannot adapt `bool` to annotated type `address`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:13:56
   │
13 │         { let x = false; { let x = @0x0; (x: u64); }; (x: address); };
   │                                                        ^

error: cannot adapt `integer` to annotated type `bool`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:14:10
   │
14 │         (x: bool);
   │          ^

error: cannot adapt `bool` to annotated type `u64`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:21:14
   │
21 │             (x: u64);
   │              ^

error: cannot adapt `address` to annotated type `u64`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:25:14
   │
25 │             (x: u64);
   │              ^

error: cannot adapt `integer` to annotated type `address`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:27:10
   │
27 │         (x: address);
   │          ^

error: cannot adapt `bool` to annotated type `u64`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:34:14
   │
34 │             (x: u64);
   │              ^

error: cannot adapt `integer` to annotated type `bool`
   ┌─ tests/checking/typing/shadowing_invalid_types.move:37:10
   │
37 │         (x: bool);
   │          ^
